# IA-2022-2023-UVABc

./: .gitignore  README.org  pyproject.toml
ai_lab/: __init__.py
ai_lab/lab_01/: __init__.py  __main__.py  lab_01.py
ai_lab/lab_02/: __init__.py  __main__.py  lab_02.py
ai_lab/lab_03/: __init__.py  __main__.py  lab_03.py
tests/: test_lab_01.py
